# investment-advisor

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  stocks.py
backend/app/core/: config.py  database.py  logging.py
backend/app/repositories/: base_repository.py
backend/app/schemas/: health.py  stock.py
backend/app/services/: stock_service.py
